@@ -4,6 +4,8 @@
 *New:*
 
     * Improve documentation
+    * Add pre-transition ``check`` hook
+    * Remove alternate ``Workflow`` definition schemes.
 
 0.2.3 (15 04 2012)
 ------------------
